--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,16 @@
         <item name="colorAccent">@color/purple_200</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:statusBarColor" tools:targetApi="lollipop">@color/purple_200</item>
-        <!-- Customize your theme here. -->
     </style>
+
+    <style name="AllHymensTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
+        <item name="colorPrimary">@color/pink</item>
+        <item name="colorPrimaryDark">@color/pink</item>
+        <item name="colorAccent">@color/pink</item>
+    </style>
+
+    <style name="myCustomMenuTextAppearance" parent="@android:style/TextAppearance.Widget.IconMenu.Item">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
