start post request

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -34,8 +34,7 @@
                 android:layout_marginEnd="20dp"
                 android:src="@drawable/marivram_logo"
                 android:layout_gravity="center|end"
-                app:layout_collapseMode="parallax"
-                />
+                app:layout_collapseMode="parallax" />
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
@@ -112,7 +111,7 @@
                     app:cardCornerRadius="40dp">
 
                     <LinearLayout
-                        android:id="@+id/bookAodasCardView"
+                        android:id="@+id/album_category_card"
                         android:foreground="?android:attr/selectableItemBackground"
                         android:clickable="true"
                         android:layout_width="match_parent"
@@ -171,7 +170,7 @@
                     app:cardCornerRadius="40dp">
 
                     <LinearLayout
-                        android:id="@+id/follow_card"
+                        android:id="@+id/create_servant_card"
                         android:foreground="?android:attr/selectableItemBackground"
                         android:clickable="true"
                         android:layout_width="match_parent"
@@ -219,7 +218,7 @@
                     app:cardCornerRadius="40dp">
 
                     <LinearLayout
-                        android:id="@+id/addTranim_card"
+                        android:id="@+id/add_tranim_card"
                         android:foreground="?android:attr/selectableItemBackground"
                         android:clickable="true"
                         android:layout_width="match_parent"
@@ -230,9 +229,9 @@
                         android:focusable="true">
 
                         <ImageView
-                            android:layout_width="55dp"
-                            android:layout_height="55dp"
-                            android:src="@drawable/about"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:src="@drawable/author"
                             android:contentDescription="@string/app_name" />
 
                         <TextView
@@ -289,7 +288,7 @@
                         <ImageView
                             android:layout_width="65dp"
                             android:layout_height="65dp"
-                            android:src="@drawable/booking"
+                            android:src="@drawable/about"
                             android:contentDescription="@string/app_name" />
 
                         <TextView
