--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MarIvramChoir" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Theme.MarIvramChoir" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryDark">@color/purple_200</item>
         <item name="colorAccent">@color/purple_200</item>
@@ -8,10 +8,16 @@
         <item name="android:statusBarColor" tools:targetApi="lollipop">@color/purple_200</item>
     </style>
 
-    <style name="AllHymensTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
+    <style name="AllHymensTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/pink</item>
         <item name="colorPrimaryDark">@color/pink</item>
         <item name="colorAccent">@color/pink</item>
+    </style>
+
+    <style name="AddTarnimaActivity" parent="Theme.MaterialComponents.Light.DarkActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimary</item>
+        <item name="colorAccent">@color/colorPrimary</item>
     </style>
 
     <style name="myCustomMenuTextAppearance" parent="@android:style/TextAppearance.Widget.IconMenu.Item">
@@ -23,6 +29,10 @@
         <item name="DialogTitleText">Loading…</item>
         <item name="DialogSpotColor">@color/pink</item>
         <item name="DialogSpotCount">4</item>
+    </style>
+
+    <style name="AddTarnimaActivity_button" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:background">@drawable/buttonstyle</item>
     </style>
 
 </resources>
