--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -31,8 +31,14 @@
         <item name="DialogSpotCount">4</item>
     </style>
 
-    <style name="AddTarnimaActivity_button" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="android:background">@drawable/buttonstyle</item>
+    <style name="AlbumActivity" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimary</item>
+        <item name="colorAccent">@color/colorPrimary</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
     </style>
+
 
 </resources>
