--- a/app/src/main/res/layout/activity_create_servant.xml
+++ b/app/src/main/res/layout/activity_create_servant.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.view.AddTarnimaActivity">
+    tools:context=".ui.view.CreateServantActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/add_tarnima_logo"
+            android:id="@+id/create_servant_logo"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginTop="20dp"
@@ -22,139 +22,117 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/add_tarnima_title"
+            android:id="@+id/create_servant_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="70dp"
             android:text="@string/app_name_arabic"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/purple_200"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/add_tarnima_logo"
+            app:layout_constraintEnd_toStartOf="@+id/create_servant_logo"
             app:layout_constraintHorizontal_bias="0.81"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/add_tarnima_sub_title"
+            android:id="@+id/create_servant_title_arabic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:text="@string/add_tarnima_arabic"
+            android:text="@string/create_servant_arabic"
             android:textColor="@color/bold_gray_text"
             android:textSize="14sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/add_tarnima_logo"
+            app:layout_constraintEnd_toStartOf="@+id/create_servant_logo"
             app:layout_constraintHorizontal_bias="0.81"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/add_tarnima_title" />
+            app:layout_constraintTop_toBottomOf="@+id/create_servant_title" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/add_tarnima_name_layout"
+            android:id="@+id/create_servant_name_layout"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="10dp"
-            android:hint="@string/hymen_name"
+            android:hint="@string/servant_name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/add_tarnima_logo">
+            app:layout_constraintTop_toBottomOf="@+id/create_servant_logo">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/add_tarnima_name"
+                android:id="@+id/create_servant_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/add_tarnima_link_layout"
+            android:id="@+id/create_servant_date_layout"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="10dp"
-            android:hint="@string/hymen_url"
+            android:hint="@string/servant_date"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/add_tarnima_name_layout">
+            app:layout_constraintTop_toBottomOf="@+id/create_servant_name_layout">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/add_tarnima_link"
+                android:id="@+id/create_servant_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName" />
+                />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/add_tarnima_type_layout"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+            android:id="@+id/create_servant_location_layout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="10dp"
-            android:hint="@string/hymen_type_txt"
+            android:hint="@string/servant_location"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/add_tarnima_link_layout">
-
-            <AutoCompleteTextView
-                android:id="@+id/add_tarnima_type"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:inputType="none"
-                tools:ignore="LabelFor" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/add_tarnima_word_layout"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="10dp"
-            android:hint="@string/hymen_words"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/add_tarnima_type_layout">
+            app:layout_constraintTop_toBottomOf="@+id/create_servant_date_layout">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/add_tarnima_words"
+                android:id="@+id/create_servant_location"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:inputType="textPersonName" />
+                />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/btn_add_tarnima"
+            android:id="@+id/btn_create_servant"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="50dp"
             android:layout_marginEnd="10dp"
-            android:text="@string/add_tarnima"
+            android:text="@string/add_servant"
             android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold"
             android:background="@drawable/buttonstyle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/add_tarnima_word_layout" />
+            app:layout_constraintTop_toBottomOf="@+id/create_servant_location_layout" />
 
         <ProgressBar
-            android:id="@+id/add_progress"
+            android:id="@+id/create_servant_progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@+id/btn_add_tarnima"
-            app:layout_constraintEnd_toEndOf="@+id/btn_add_tarnima"
-            app:layout_constraintStart_toStartOf="@+id/btn_add_tarnima"
-            app:layout_constraintTop_toTopOf="@+id/btn_add_tarnima" />
+            app:layout_constraintBottom_toBottomOf="@+id/btn_create_servant"
+            app:layout_constraintEnd_toEndOf="@+id/btn_create_servant"
+            app:layout_constraintStart_toStartOf="@+id/btn_create_servant"
+            app:layout_constraintTop_toTopOf="@+id/btn_create_servant" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
