--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MarIvramChoir" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.MarIvramChoir" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryDark">@color/purple_200</item>
         <item name="colorAccent">@color/purple_200</item>
@@ -40,5 +40,12 @@
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
     </style>
 
+    <style name="CreateServantTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
+        <item name="colorPrimary">@color/purple_200</item>
+        <item name="colorPrimaryDark">@color/purple_200</item>
+        <item name="colorAccent">@color/purple_200</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:statusBarColor" tools:targetApi="lollipop">@color/purple_200</item>
+    </style>
 
 </resources>
