--- a/app/src/main/res/layout/activity_add_hymns_in_srvant.xml
+++ b/app/src/main/res/layout/activity_add_hymns_in_srvant.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.view.AllHymensActivity">
+    tools:context=".ui.view.AddHymnsInServantActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/Rv_hymens"
+        android:id="@+id/add_hymens_servant"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
