--- a/app/src/main/res/layout/activity_all_hymns_in_album.xml
+++ b/app/src/main/res/layout/activity_all_hymns_in_album.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.view.AllHymensInAlbumActivity">
+    tools:context=".ui.view.AllHymnsInAlbumActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/all_hymens_in_album"
