--- a/app/src/main/res/layout/activity_hymn_word.xml
+++ b/app/src/main/res/layout/activity_hymn_word.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:id="@+id/scroll"
-    tools:context=".ui.view.HymenWordActivity">
+    tools:context=".ui.view.HymnWordActivity">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
