--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,6 +31,7 @@
     <color name="view_gray">#809ca299</color>
     <color name="hint_text">#9CA299</color>
     <color name="trans_color">#80D3E1E1</color>
+    <color name="tot_back">#cccccc</color>
 
 
     <color name="purple_200">#4E1313</color>
