--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -56,4 +56,12 @@
         <item name="android:statusBarColor" tools:targetApi="lollipop">@color/purple_200</item>
     </style>
 
+    <style name="loginTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/login_color</item>
+        <item name="colorPrimaryDark">@color/login_color</item>
+        <item name="colorAccent">@color/login_color</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:statusBarColor" tools:targetApi="lollipop">@color/login_color</item>
+    </style>
+
 </resources>
